--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"axios": "^0.27.2",
 		"bootstrap": "^5.1.3",
 		"font-awesome": "^4.7.0",
+		"prop-types": "^15.8.1",
+		"query-string": "^7.1.1",
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.4.0",
 		"react-dom": "^18.1.0",
